--- a/assets/scss/components/_click-to-play.scss
+++ b/assets/scss/components/_click-to-play.scss
@@ -29,7 +29,7 @@
     #random-number-wrapper{
         height: 6.5rem;
         @include base.make-flexbox($direction: column, $justify: center);
-        color: base.$pink;
+        color: base.$yellow;
     
         &.pulse{
 
