--- a/assets/scss/components/_scoreboard.scss
+++ b/assets/scss/components/_scoreboard.scss
@@ -54,17 +54,17 @@
         position: relative;
         top: -1rem;
         left: -2rem;
-        height: 4rem;
+        height: 5rem;
         width: 5rem;
         z-index: 1;
         background-color: base.$pink;
 
         .value{
-            font-size: 1.75rem;
+            font-size: 1.5rem;
         }
 
         .label{
-            font-size: 1.25rem;
+            font-size: 1rem;
         }
     }
 }
@@ -88,6 +88,14 @@
             height: 5rem;
             width: 6rem;
             z-index: 1;
+
+            .value{
+                font-size: 1.75rem;
+            }
+
+            .label{
+                font-size: 1.5rem;
+            }
         }
     }
 }
